# LLM-chatbot

./: .flake8  .gitignore  LICENSE  README.md  api.py  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: .env.example  ingest_manuals.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  SupportAssistant.tsx  config.ts
scripts/: launch.py  launch.py.corrupted
tests/: conftest.py  test_utils.py
